<resources>
    <string name="app_name">ToolbarSample</string>
    <string name="setting">设置</string>
    <string name="mockingbird_lyric">Yeah     I know sometimes things may not always make sense to you right now     But hey, what daddy always tell you?     Straighten up little soldier     Stiffen up that upper lip     What you crying about?     You got me     Hailie I know you miss your mom and I know you miss your dad     When I\'m gone but I\'m trying to give you the life that I never had     I can see you\'re sad, even when you smile, even when you laugh     I can see it in your eyes, deep inside you want to cry     \'Cause you\'re scared, I ain\'t there?     Daddy\'s with you in your prayers     No more crying, wipe them tears     Daddy\'s here, no more nightmares     We gonna pull together through it, we gonna do it     Laney uncles crazy, ain\'t he?     Yeah but he loves you girl and you better know it     We\'re all we got in this world     When it spins, when it swirls     When it whirls, when it twirls     Two little beautiful girls     Lookin\' puzzled, in a daze     I know it\'s confusing you     Daddy\'s always on the move, mamma\'s always on the news     I try to keep you sheltered from it but somehow it seems     The harder that I try to do that, the more it backfires on me     All the things growing up his daddy that he had to see     Daddy don\'t want you to see but you see just as much as he did     We did not plan it to be this way, your mother and me     But things have gotten so bad between us     I don\'t see us ever being together ever again     Like we used to be when we was teenagers     But then of course everything always happens for a reason     I guess it was never meant to be     But it\'s just something we have no control over and that\'s what destiny is     But no more worries, rest your head and go to sleep     Maybe one day we\'ll wake up and this will all just be a dream     Now hush little baby, don\'t you cry     Everything\'s gonna be alright     Stiffen that upper lip up little lady, I told ya     Daddy\'s here to hold ya through the night     I know mommy\'s not here right now and we don\'t know why     We fear how we feel inside     It may seem a little crazy, pretty baby     But I promise momma\'s gonna be alright     It\'s funny     I remember back one year when daddy had no money     Mommy wrapped the christmas presents up     And stuck \'em under the tree and said some of \'em were from me     \'Cause daddy couldn\'t buy \'em     I\'ll never forget that christmas I sat up the whole night crying     \'Cause daddy felt like a bum, see daddy had a job     But his job was to keep the food on the table for you and mom     And at the time every house that we lived in     Either kept getting broke into and robbed     Or shot up on the block and your mom was saving money for you in a jar     Tryin\' to start a piggy bank for you so you could go to college     Almost had a thousand dollars till someone broke in and stole it     And I know it hurt so bad it broke your momma\'s heart     And it seemed like everything was just startin\' to fall apart     Mom and dad was arguin\' a lot so momma moved back     On the chalmers in the flat one bedroom apartment     And dad moved back to the other side of 8 mile on Novara     And that\'s when daddy went to california with his CD and met Dr. Dre     And flew you and momma out to see me     But daddy had to work, you and momma had to leave me     Then you started seeing daddy on the t.V. And momma didn\'t like it     And you and Laney were to young to understand it     Papa was a rollin\' stone, momma developed a habit     And it all happened too fast for either one of us to grab it     I\'m just sorry you were there and had to witness it first hand     \'Cause all I ever wanted to do was just make you proud     Now I\'m sittin\' in this empty house, just reminiscing     Lookin\' at your baby pictures, it just trips me out     To see how much you both have grown, it\'s almost like you\'re sisters now     Wow, guess you pretty much are and daddy\'s still here     Laney I\'m talkin\' to you too, daddy\'s still here     I like the sound of that, yeah     It\'s got a ring to it don\'t it?     Shh, momma\'s only gone for the moment     Now hush little baby, don\'t you cry     Everything\'s gonna be alright     Stiffen that upper lip up little lady, I told ya     Daddy\'s here to hold ya through the night     I know mommy\'s not here right now and we don\'t know why     We fear how we feel inside     It may seem a little crazy, pretty baby     But I promise momma\'s gonna be alright     And if you ask me too     Daddy\'s gonna buy you a mockingbird     Ima give you the world     Ima buy a diamond ring for you     Ima sing for you     I\'ll do anything for you to see you smile     And if that mockingbird don\'t sing and that ring don\'t shine     Ima break that birdies neck     I\'d go back to the jeweler who sold it to ya     And make him eat every carat don\'t f*** with dad (ha)</string>
    <string name="normal_toolbar">ToolbarNormal</string>
    <string name="toolbar_image">ToolbarImage</string>
    <string name="toolbar_tablayout">ToolbarTabLayout</string>
</resources>
